@@ -1,11 +1,0 @@
-\version "1.5.68"
-
-\header {
- texidoc = "Dots should remain close to the heads they belong to, but should not overlap."
-}
-
-
-\score {
-  \notes
-   \context Voice { <f,4. c'' d e f> }
-}
