@@ -1,6 +1,0 @@
-
-\header {
-    texidoc = "Fermata on rest doesn't go up"
-    }
-
-\score { \notes {  r4-\fermata }} 
